--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
     "normalize.css": "^8.0.1",
+    "serve-favicon": "^2.5.0",
     "swiper": "^8.1.0"
   }
 }
